--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= Rails with React tutorial sample files
- 
-This is part of a tutorial article about React-rails on Pluralsight:
-=== {Building a CRUD interface with React and Ruby on Rails}[link:http://tutorials.pluralsight.com/ruby-ruby-on-rails/building-a-crud-interface-with-react-and-ruby-on-rails]
+задание https://gist.github.com/zzet/bb6ac8087a2997a10deb4687518a82c4
+решение основано на статье:
+1. https://scotch.io/tutorials/build-a-restful-json-api-with-rails-5-part-one
+2. {Building a CRUD interface with React and Ruby on Rails}[link:http://tutorials.pluralsight.com/ruby-ruby-on-rails/building-a-crud-interface-with-react-and-ruby-on-rails]
